# nyc_taxis_dab

./: README.md  databricks.yml  pyproject.toml
resources/: nyc_taxis_etl.pipeline.yml  nyc_taxis_gold.pipeline.yml  nyc_taxis_job.job.yml  sample_job.job.yml  schemas.yml
src/: sample_notebook.ipynb
src/nyc_taxis_dab/: main.py  mappings.py  taxis.py
src/nyc_taxis_etl/: README.md
src/nyc_taxis_etl/transformations/: silver_main_transformation.py  taxi_fares.py  taxi_with_weather.py  weather.py  weather_hourly.py
src/nyc_taxis_gold/transformations/: daily_metrics.py  dayofweek_metrics.py  hourly_metrics.py  top_routes.py  weather_metrics.py
tests/: sample_taxis_test.py
