[project]
name = "nyc_taxis_dab"
version = "0.0.1"
authors = [{ name = "dumel77@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
]

[project.scripts]
main = "nyc_taxis_dab.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nyc_taxis_dab"]

[tool.hatch.build.targets.editable]
dev-mode-dirs = ["src"]

[tool.ruff]
line-length = 120
